fix css lag on mobile

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -61,20 +61,21 @@
 
 /* handle exposion animation */
 .explodeBall {
+    z-index: 10;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 0;
-    height: 0;
+    width: 100px;
+    height: 100px;
     transform: translate(-50%, -50%);
 }
 
 .explode {
-    width: 1000px;
-    height: 1000px;
+    position: relative;
     background-color: aliceblue;
     border-radius: 100%;
-    transition: width 4s ease-in, height 4s ease-in;
+    width: 100%;
+    height: 100%;
     z-index: 10;
     box-shadow: 0 0 20px  rgb(255, 255, 255),
                 0 0 60px  rgb(230, 230, 230),
@@ -83,15 +84,79 @@
                 0 0 150px rgb(100, 100, 100),
                 0 0 200px rgb(60, 60, 60),
                 0 0 300px rgb(20, 20, 20);
+    animation-name: explosionAnimation;
+    -webkit-animation-name: explosionAnimation;
+    -moz-animation-name: explosionAnimation;
+
+    animation-timing-function: cubic-bezier(.8,-0.01,.56,1.04); /* ease-in-out is slow at the beginning and the end */
+    -webkit-animation-timing-function: cubic-bezier(.8,-0.01,.56,1.04);
+    -moz-animation-timing-function: cubic-bezier(.8,-0.01,.56,1.04);
+
+    animation-duration: 3s; /* One iteration of this animation will take 5s */
+    -webkit-animation-duration: 3s;
+    -moz-animation-duration: 3s; 
+
+    transform-origin: center
 }
 
-.impodeBall {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    transform: translate(-50%, -50%);
+@keyframes explosionAnimation{
+    from {transform: scale(0);}
+    to {transform: scale(20);}
+}    
+/* Chrome, Safari, Opera */
+@-webkit-keyframes explosionAnimation{
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(20)}
+}
+/* Firefox */
+@-moz-keyframes explosionAnimation{
+    from {-moz-transform: scale(0)}
+    to {-moz-transform: scale(20)}
+}
+
+.implode {
+    position: relative;
+    background-color: aliceblue;
+    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    box-shadow: 0 0 20px  rgb(255, 255, 255),
+                0 0 60px  rgb(230, 230, 230),
+                0 0 80px  rgb(160, 160, 160),
+                0 0 100px rgb(120, 120, 120),
+                0 0 150px rgb(100, 100, 100),
+                0 0 200px rgb(60, 60, 60),
+                0 0 300px rgb(20, 20, 20);
+    animation-name: implodeAnimation;
+    -webkit-animation-name: implodeAnimation;
+    -moz-animation-name: implodeAnimation;
+
+    animation-timing-function: linear; /* ease-in-out is slow at the beginning and the end */
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+
+    animation-duration: 1s; /* One iteration of this animation will take 5s */
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s; 
+
+    transform-origin: center;
+    transform: scale(0);
+}
+
+@keyframes implodeAnimation{
+    from {transform: scale(20);}
+    to {transform: scale(0);}
+}    
+/* Chrome, Safari, Opera */
+@-webkit-keyframes explosionAnimation{
+    from {-webkit-transform: scale(20)}
+    to {-webkit-transform: scale(0)}
+}
+/* Firefox */
+@-moz-keyframes explosionAnimation{
+    from {-moz-transform: scale(20)}
+    to {-moz-transform: scale(0)}
 }
 
 /* quick spinn */
